# wlrobs

./: .build.yml  .hg_archival.txt  README.md  meson.build  meson_options.txt  wlrobs_1.0.orig.tar.gz.delta  wlrobs_1.0.orig.tar.gz.id
debian/: changelog  control  copyright  watch
glad/: glad.c
inc/: dmabuf_source.h  scpy_source.h  wlr-export-dmabuf-unstable-v1-client-protocol.h  wlr-screencopy-unstable-v1-client-protocol.h
inc/glad/: glad.h  glad_egl.h
proto/: wlr-export-dmabuf-unstable-v1-protocol.c  wlr-screencopy-unstable-v1-protocol.c
src/: dmabuf_source.c  main.c  scpy_source.c
